# Calculator

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: action.yml  codeql-analysis.yml  docker.yml  manual.yml  test.yml
app/: CMakeLists.txt  main.cpp
include/: BinNumberExpression.h  BinaryExpression.h  Expression.h  HexNumberExpression.h  Lexer.h  NumberExpression.h  Parser.h  Token.h  UnaryExpression.h  algorithm.h
lib/: CMakeLists.txt
lib/include/: algorithm.hpp  bin_number_expression.hpp  binary_expression.hpp  expression.hpp  factorial_expression.hpp  hex_number_expression.hpp  lexer.hpp  number_expression.hpp  parser.hpp  token.hpp  unary_expression.hpp
parser/: CMakeLists.txt
parser/include/: algorithm.hpp  bin_number_expression.hpp  lexer.hpp  number_expression.hpp  parser.hpp  unary_expression.hpp
src/: BinaryExpression.cpp  CMakeLists.txt  Lexer.cpp  NumberExpression.cpp  Parser.cpp  Token.cpp  UnaryExpression.cpp  algorithm.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  lexer.cpp  parser.cpp
